@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.kodi.knewc" name="NextPVR New Client" version="2.9.2" provider-name="emveepee">
+<addon id="script.kodi.knewc" name="NextPVR New Client" version="2.9.3" provider-name="emveepee">
     <requires>
         <!--import addon="xbmc.python" version="2.1.0"/-->
         <import addon="script.module.future" version="0.16.0.4"/>
